src/test/deca/syntax/invalid/test_dir/added/lexer/comment_not_closed.deca
// Description:
//    test with too much closing comment
//
// Results:
//    test_lex --> error line 10
//
// History:
//    created on 04/01/2022

/* This is an unclosed comment